WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195245
[GTK][WPE] Wrong license header in WebKit{,WebExtension}Autocleanups.h
https://bugs.webkit.org/show_bug.cgi?id=195245
Summary
[GTK][WPE] Wrong license header in WebKit{,WebExtension}Autocleanups.h
Adrian Perez
Reported
2019-03-02 09:28:58 PST
The license headers in these two files contain the Apple license blurb, but the LGPL2 text should be used instead — because that one is the license we use for the API layer of the GTK port. A quick check with “git blame” shows that there are only a few people who have touched those: - Michael Catanzaro - Tomas Popela - Carlos Garcia Campos - Adrian Perez de Castro (that's me!) I'll try to get the authors to explicitly comment here that changing the license header is fine by them, before making the actual change.
Attachments
Patch
(11.28 KB, patch)
2019-03-04 04:45 PST
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2019-03-02 09:31:57 PST
Adding [WPE], because in
bug #195211
the patch copied the GTK port headers, so the WPE headers have to be changed once everybody agrees. FWIW: I explicitly agree to change the license for these two files.
Michael Catanzaro
Comment 2
2019-03-02 09:37:35 PST
Oops. This is pretty minor, but yeah, let's change it. Explicit +1.
Tomas Popela
Comment 3
2019-03-04 01:34:39 PST
+1 from me as well. Thank you Adrian for spotting this!
Carlos Garcia Campos
Comment 4
2019-03-04 01:48:43 PST
Sure!
Adrian Perez
Comment 5
2019-03-04 03:51:15 PST
Thanks everybody for agreeing, I'll take care of making the patch to change the license blurbs :)
Adrian Perez
Comment 6
2019-03-04 04:45:57 PST
Created
attachment 363503
[details]
Patch
EWS Watchlist
Comment 7
2019-03-04 04:47:15 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
WebKit Commit Bot
Comment 8
2019-03-04 06:23:50 PST
Comment on
attachment 363503
[details]
Patch Clearing flags on attachment: 363503 Committed
r242351
: <
https://trac.webkit.org/changeset/242351
>
WebKit Commit Bot
Comment 9
2019-03-04 06:23:52 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2019-03-04 06:30:53 PST
<
rdar://problem/48560805
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug