[GTK][WPE] Wrong license header in WebKit{,WebExtension}Autocleanups.h https://bugs.webkit.org/show_bug.cgi?id=195245

Reviewed by Carlos Garcia Campos.

Changed license headers to contain the LGPL, which is the correct one for the GTK
and WPE ports. The change was agreed by the contributors to the files involved.

* UIProcess/API/gtk/WebKitAutocleanups.h:
* UIProcess/API/wpe/WebKitAutocleanups.h:
* WebProcess/InjectedBundle/API/gtk/WebKitWebExtensionAutocleanups.h:
* WebProcess/InjectedBundle/API/wpe/WebKitWebExtensionAutocleanups.h:


Canonical link: https://commits.webkit.org/209615@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242351 268f45cc-cd09-0410-ab3c-d52691b4dbfc